# temp

./: .env  pyproject.toml
src/: run.py
src/app/api/: main.py
src/app/api/routers/: __init__.py  home.py  news.py  search.py
src/app/database/: __init__.py  config.py  orm_registry.py
src/app/database/models/: __init__.py  news_table.py
src/app/domain/: __init__.py
src/app/domain/news/: entity.py
src/app/schemas/: __init__.py  enums.py  news_model.py  search_models.py
src/migrations/: env.py
src/migrations/versions/: 29295321bb0a_add_news_table.py  94966b65f69c_initial_migration.py  b882570c2ded_add_news_table_now.py
